# KurveM

./: .gitmodules  CMakeLists.txt  KurveMConfig.h.in  LICENSE  README.md
include/: .gitignore  Animation.h  AppMain.h  Application.h  AxisControl.h  BezierCurveNode2.h  BezierCurveNode3.h  Camera.h  CameraController.h  ColorTheme.h  CurveModel.h  Datastore.h  Editor.h  EditorInputController.h  FileDialog.h  Gizmos.h  ImGuiExt.h  LocalModel.h  MeshExporter.h  Model.h  Object.h  PathModel.h  PhysicsEngine.h  PrimitiveGenerator.h  RenderTexture.h  SelectionControl.h  ShaderPixel.h  ShaderProgram.h  ShaderSettings.h  ShaderStorageBuffer.h  ShaderVertex.h  Texture.h  ToolSettings.h  Transform.h  TransformVisualizer.h  UVEditor.h  Workspace.h  XMLIO.h
include/Actions/: Action.h  AddAnimationNodeAction.h  AddCurveNodeWeightAction.h  AddPathNodeWeightAction.h  AddShaderVariableAction.h  AddVertexInputAction.h  CreateAnimationAction.h  CreateObjectAction.h  DeleteAnimationAction.h  DeleteCurveNodeAction.h  DeleteNodeAction.h  DeleteObjectAction.h  DeletePathNodeAction.h  ExtrudeArmatureNodeAction.h  ExtrudeCurveNodeAction.h  ExtrudeNodeAction.h  ExtrudePathNodeAction.h  ExtrudeShapeNodeAction.h  FlipFaceAction.h  InsertFaceAction.h  InsertPathLineAction.h  MoveCurveNodeAction.h  MoveCurveNodeHandleAction.h  MoveNodeAction.h  MoveNodeHandleAction.h  MovePathNodeAction.h  MovePathNodeHandleAction.h  MoveShapeHandleAction.h  MoveShapeNodeAction.h  MoveShapeNodeHandleAction.h  MoveUVAction.h  RemoveAnimationNodeAction.h  RenameObjectAction.h  RotateCurveNodeAction.h  RotateNodeAction.h  RotateObjectAction.h  RotateObjectRelativeAction.h  RotatePathNodeAction.h  ScaleCurveNodeAction.h  ScaleNodeAction.h  (+42 more)
include/EditorControls/: Editor.h  ShapeEditor.h
include/Editors/: AnimateEditor.h  ControlEditor.h  EditEditor.h  ObjectEditor.h  WeightPaintingEditor.h
include/IO/: AnimationSerializer.h  CollisionObjectSerializer.h  CollisionShapeSerializer.h  CurveModelSerializer.h  MeshExporter.h  ObjectSerializer.h  PathModelSerializer.h
include/LongTasks/: LongTask.h  SaveLongTask.h  TriangulateCurveLongTask.h  TriangulatePathLongTask.h
include/Modals/: ConfirmModal.h  CreateAnimationModal.h  DeleteNodesModal.h  ErrorModal.h  ExportColladaModal.h  ExportOBJModal.h  LoadFileModal.h  LoadReferenceImageModal.h  LoadShaderModal.h  Modal.h  SaveFileModal.h
include/Physics/: ArmatureBody.h  CollisionObject.h  PhysicsDebugDrawer.h  Rigidbody.h  StridingMeshInterface.h  TransformMotionState.h
include/Physics/CollisionObjects/: CollisionObject.h  Rigidbody.h  Softbody.h
include/Physics/CollisionShapes/: BoxCollisionShape.h  CapsuleCollisionShape.h  CollisionShape.h  MeshCollisionShape.h  PlaneCollisionShape.h  SphereCollisionShape.h
include/PropertiesWindows/: AnimatePWindow.h  CurvePWindow.h  ObjectPWindow.h  PWindow.h  PathPWindow.h  PhysicsPWindow.h  RenderingPWindow.h
include/ShaderVariables/: ShaderVariable.h  VertexInput.h
include/ToolActions/: ExtrudeArmatureNodeToolAction.h  ExtrudeCurveNodeToolAction.h  ExtrudePathNodeToolAction.h  ExtrudeShapeNodeToolAction.h  MoveArmatureNodeToolAction.h  MoveCurveNodeToolAction.h  MovePathNodeToolAction.h  MoveShapeNodeToolAction.h  RotateArmatureNodeToolAction.h  RotateCurveNodeToolAction.h  RotatePathNodeToolAction.h  ScaleCurveNodeToolAction.h  ScalePathNodeToolAction.h  ToolAction.h
include/Windows/: AnimatorWindow.h  EditorWindow.h  HierarchyWindow.h  OptionsWindow.h  PropertiesWindow.h  ShapeEditorWindow.h  ToolbarWindow.h  UVEditorWindow.h  Window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: animatorSBody.frag  animatorSBody.vert  animatorSBodySolid.frag  animatorStandard.vert  editorStandard.frag  editorStandard.vert  gizmos.frag  gizmos.vert  grid.frag  grid.vert  referenceImage.frag  referenceImage.vert  weightStandard.frag  weightStandard.vert
src/: AddAnimationNodeAction.cpp  AddCurveNodeWeightAction.cpp  AddPathNodeWeightAction.cpp  AddShaderVariableAction.cpp  AddVertexInputAction.cpp  AnimateEditor.cpp  AnimatePWindow.cpp  Animation.cpp  AnimationSerializer.cpp  AnimatorWindow.cpp  AppMain.cpp  Application.cpp  ArmatureBody.cpp  AxisControl.cpp  BezierCurveNode2.cpp  BezierCurveNode3.cpp  BoxCollisionShape.cpp  Camera.cpp  CameraController.cpp  CapsuleCollisionShape.cpp  CollisionObject.cpp  CollisionObjectSerializer.cpp  CollisionShapeSerializer.cpp  ColorTheme.cpp  ConfirmModal.cpp  CreateAnimationAction.cpp  CreateAnimationModal.cpp  CreateObjectAction.cpp  CurveModel.cpp  CurveModelSerializer.cpp  CurvePWindow.cpp  Datastore.cpp  DeleteAnimationAction.cpp  DeleteCurveNodeAction.cpp  DeleteNodeAction.cpp  DeleteNodesModal.cpp  DeleteObjectAction.cpp  DeletePathNodeAction.cpp  EditEditor.cpp  Editor.cpp  (+145 more)
